--- a/_config.yml
+++ b/_config.yml
@@ -32,14 +32,14 @@ github_url: ""
 
 # Build settings
 theme: project-dashboard
-# plugins:
-#   - jekyll-tailwind
+plugins:
+  - jekyll-tailwind
 
-# tailwind:
-#   config: tailwind.config.js
-#   input: _sass/project-dashboard.css
-#   output: _sass/project-dashboard.scss
-#   minify: true
+tailwind:
+  config: tailwind.config.js
+  input: _sass/project-dashboard.css
+  output: _sass/project-dashboard.scss
+  minify: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
