moving tailwind back to npm

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ github_url: ""
 # Build settings
 theme: project-dashboard
 plugins:
-  - jekyll-tailwindcss
+- jekyll-postcss
 
 
 # Exclude from processing.
