using postcss instead of tailwind plugin

--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,10 @@ github_url: ""
 # Build settings
 theme: project-dashboard
 plugins:
-- jekyll-postcss
+  - jekyll-postcss-v2
 
+postcss:
+  cache: false
 
 # Exclude from processing.
 # The following items will not be processed, by default.
