--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
-    "@tailwindcss/postcss": "^4.0.17",
+    "@tailwindcss/postcss": "^4.0.14",
+    "@tailwindcss/typography": "^0.5.16",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.17"
+    "postcss-cli": "^11.0.1",
+    "tailwindcss": "^4.0.14"
   }
 }
